--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -22,6 +22,7 @@ set(
     ${TEST_SRC_DIR}/test_main.cpp
     ${TEST_SRC_DIR}/test_event_queue.cpp
     ${TEST_SRC_DIR}/test_server_loop_base.cpp
+    ${TEST_SRC_DIR}/test_loop_obj_factory.cpp
 )
 
 
