--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -23,6 +23,7 @@ set(
     ${TEST_SRC_DIR}/test_event_queue.cpp
     ${TEST_SRC_DIR}/test_server_loop_base.cpp
     ${TEST_SRC_DIR}/test_loop_obj_factory.cpp
+    ${TEST_SRC_DIR}/test_server_loop.cpp
 )
 
 
