Factory method to create signal fd.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -24,6 +24,7 @@ set(
     ${TEST_SRC_DIR}/test_server_loop_base.cpp
     ${TEST_SRC_DIR}/test_loop_obj_factory.cpp
     ${TEST_SRC_DIR}/test_server_loop.cpp
+    ${TEST_SRC_DIR}/test_fd_factory.cpp
 )
 
 
