Fix examples build.

--- a/examples/posix_queue/CMakeLists.txt
+++ b/examples/posix_queue/CMakeLists.txt
@@ -5,8 +5,6 @@ project( example_posix_queue )
 find_library( EVENT event )
 find_library( PTHREAD pthread )
 find_library( RT rt )
-find_library( EVENTLOOP eventloop
-              PATHS ${CMAKE_BINARY_DIR} )
 
 add_executable(
     example_posix_queue
@@ -19,6 +17,6 @@ target_link_libraries(
     example_posix_queue
     ${EVENT}
     ${PTHREAD}
-    ${EVENTLOOP}
+    eventloop
     ${RT}
 )
